Added usage code on readme

--- a/samples/jupyter/main.ipynb
+++ b/samples/jupyter/main.ipynb
@@ -157,7 +157,7 @@
     "def disconnected(client, reason): # Callback for client disconnection\n",
     "    print(\"\\nDisconnected, reason: \", reason)\n",
     "\n",
-    "def connected(client): # # Callback for client connection\n",
+    "def connected(client): # Callback for client connection\n",
     "    print(\"Connected\")\n",
     "    logonRequest = LogonRequest(config)\n",
     "    send(logonRequest)\n",
